Fix centering of logo in courseware header
The Stanford "S" and was previously not centered in CME. This change to the CSS fixes the issue

--- a/lms/static/sass/course/layout/_courseware_header.scss
+++ b/lms/static/sass/course/layout/_courseware_header.scss
@@ -170,6 +170,10 @@ header.global.slim {
     img {
       height: 30px;
     }
+    
+    a {
+        line-height: 1em;
+    }
   }
 
   .nav-main,
